# jobsys

./: Cargo.toml  README.md  customers.yml  jobs.yml  vehicles.yml
inquirer_derive/: Cargo.toml
inquirer_derive/src/: lib.rs
inquirer_rs/: Cargo.toml
inquirer_rs/src/: error.rs  helpers.rs  lib.rs  menu.rs
job_bin/: Cargo.toml
job_bin/src/: main.rs
job_entities/: Cargo.toml
job_entities/src/: customer.rs  lib.rs  vehicle.rs
job_error/: Cargo.toml
jobapp/: Cargo.toml
jobapp/src/: main.rs
jobsys_bin/: Cargo.toml
jobsys_bin/src/: main.rs
jobsys_error/: Cargo.toml
jobsys_lib/: Cargo.toml
jobsys_lib/src/: customer.rs  error.rs  job.rs  lib.rs  menu.rs  system.rs  vehicle.rs
menu/: Cargo.toml
menu/src/: data.rs  lib.rs  structs.rs
menu_derive/: Cargo.toml
menu_derive/src/: lib.rs
